<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_inicio"/>
        <item
                android:id="@+id/nav_graficas"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_graficas"/>
        <item
                android:id="@+id/nav_calendario"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_calendario"/>
        <item
                android:id="@+id/nav_opciones"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_opciones_usuario"/>
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>
-->
</menu>
