<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CL_series">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_peso"
            android:text="@string/subtitulo_ejercicios_Peso"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_repeticiones"
            android:text="@string/subtitulo_ejercicios_Repeticiones"
            android:inputType="number"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/edittext_RPE"
            app:layout_constraintStart_toEndOf="@+id/edittext_peso"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_RPE"
            android:text="@string/subtitulo_ejercicios_RPE"
            android:inputType="number"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>